<resources>
    <string name="app_name">android</string>
    <string name="title_select_filter">Select  filter</string>
    <string name="title_tournament_tournamentV">Tournament: </string>
    <string name="subTitle_match_to_play">Match to play</string>
    <string name="subTitle_match_played">Match played</string>
    <string name="title_select_create_team">Select Group</string>
    <string name="title_teams">Teams</string>
    <string name="title_group">Create Group: </string>
    <string name="edTxt_create_team">Team name</string>
    <string name="btn_select_players">Select players</string>
    <string name="title_create_group">Create Group</string>
    <string name="txt_name">Name</string>
    <string name="title_list_group">Group List</string>
    <string name="title_list_players">Players</string>
    <string name="title_add_player">Add Player</string>
    <string name="player_name">Name</string>
    <string name="player_type">Type</string>
    <string name="btn_add_team">Create Team</string>
    <string name="btn_players">Players</string>
    <string name="btn_teams">Teams</string>
    <string name="playerDescription">Description</string>
    <string name="title_list_team">Team List</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit Player Profile</string>
    <string name="title_new_player">New Player</string>
    <string name="txt_height">Height</string>
    <string name="txt_status">Status</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="txt_group">Group</string>
    <string name="playerGroup">User sport group</string>
    <string name="btn_add_player">Add player</string>
    <string name="title_activity_home_activty">HomeActivty</string>
    <string name="title_tournament">Tournament</string>
    <string name="title_sport">Sport</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_sports">Sports</string>
    <string name="title_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_type_match">SelectTypeMatch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_match_view">MatchViewActivity</string>
    <string name="title_activity_edit_result_view">EditResultView</string>
</resources>
