<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/idTextTitleAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_player"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/idNameAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/player_name"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/idTypeAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/player_type"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/idDescriptionAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/playerDescription"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/idSportGroupAddSport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txt_group"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/idBtn_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textSize="20dp"/>
</LinearLayout>